--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "test",
+    "name": "AnimalGenerator",
     "slug": "test",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -18,6 +18,10 @@
     ],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.alexanderdimitrov.animalgenerator",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
